Making sure that no floats spill into .social block (fixes #26)

--- a/style.css
+++ b/style.css
@@ -405,6 +405,7 @@ td { vertical-align: top; }
 .social {
 	background: #fffaea;
 	overflow: hidden;
+	clear: both;
 }
 .social h2 {
 	border-color: #f9b410;
